Use ubb-fork of healthSciences theme.

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,4 +55,4 @@
 	url = https://github.com/ojsde/shariff.git
 [submodule "plugins/themes/healthSciences"]
 	path = plugins/themes/healthSciences
-	url = https://github.com/pkp/healthSciences.git
+	url = https://github.com/ubbdst/healthSciences.git
