--- a/.gitmodules
+++ b/.gitmodules
@@ -47,7 +47,7 @@
 [submodule "plugins/themes/bootstrap3"]
 	path = plugins/themes/bootstrap3
 	url = https://github.com/ubbdst/bootstrap3.git
-[submodule "addThis"]
+[submodule "plugins/generic/addThis"]
 	path = plugins/generic/addThis
 	url = https://github.com/pkp/addThis.git
 [submodule "plugins/generic/shariff"]
