--- a/.gitmodules
+++ b/.gitmodules
@@ -2,8 +2,8 @@
 	path = lib/pkp
 	url = https://github.com/pkp/pkp-lib.git
 [submodule "plugins/generic/usageStats"]
-        path = plugins/generic/usageStats
-        url = https://github.com/pkp/usageStats.git
+	path = plugins/generic/usageStats
+	url = git@github.com:ubbdst/usageStats.git
 [submodule "plugins/generic/customBlockManager"]
 	path = plugins/generic/customBlockManager
 	url = https://github.com/pkp/customBlockManager.git
